feat: jwtService implemented
