# auth_service/docs/swagger.json
@@ -44,6 +44,23 @@
         }
     },
     "definitions": {
+        "dtos.UserInfoResponse": {
+            "type": "object",
+            "properties": {
+                "avatar": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "rating": {
+                    "type": "integer"
+                }
+            }
+        },
         "dtos.UserSignUpRequest": {
             "type": "object",
             "required": [
@@ -68,13 +85,12 @@
         },
         "dtos.UserSignUpResponse": {
             "type": "object",
-            "required": [
-                "token"
-            ],
             "properties": {
                 "token": {
-                    "description": "required: true",
                     "type": "string"
+                },
+                "user_info": {
+                    "$ref": "#/definitions/dtos.UserInfoResponse"
                 }
             }
         }
